# SourceGen

./: CMakeLists.txt  README.md
cmake/: build.cmake  flags.cmake
common/utility/: CMakeLists.txt
common/utility/inc/: Color.h  ColorFactory.h  ColorLoop.h  ColorUtils.hpp  FileUtils.hpp  Font.h  FontFactory.h  ObjectList.hpp  ObjectMap.hpp  ParseUtils.hpp  STLUtils.hpp  StringBuilder.h  StringList.h  StringUtils.hpp  SystemUtils.hpp  XMLDataElement.h  XMLReader.h  XMLStreamWriter.h  XMLUtils.h
common/utility/src/: Color.cpp  ColorFactory.cpp  ColorLoop.cpp  Font.cpp  Random.cpp  StringBuilder.cpp  StringList.cpp  XMLDataElement.cpp  XMLReader.cpp
common/utility/tests/src/: test_StringUtils.cpp
products/SourceGen/: CMakeLists.txt
products/SourceGen/inc/: SourceGen.h  SourceGenInfo.h  UISourceGen.h  UISourceGenAbout.h
products/SourceGen/resx/: resources.qrc
products/SourceGen/src/: SourceGenInfo.cpp  UISourceGen.cpp  UISourceGen.ui  UISourceGenAbout.cpp  main.cpp
products/SourceGen/templates/: class_normal_template.h  class_qtwidget_template.cpp  class_qtwidget_template.h  class_static_template.cpp
products/sgen/sgen/: CMakeLists.txt  INSTALL.txt  README.txt
products/sgen/sgen/src/: main.cpp
products/sgen/sgen_qt/: CMakeLists.txt
products/sgen/sgen_qt/inc/: UISourceGen.h
products/sgen/sgen_qt/resx/: CMakeLists.txt
products/sgen/sgen_qt/src/: UISourceGen.cpp  UISourceGen.ui  UISourceGenAbout.ui  main.cpp
products/sgen/sgen_resx/: img_sourcegen_logo.ufo
products/sgen/sgen_utils/: CMakeLists.txt
products/sgen/sgen_utils/.sgen_templates/: class_normal_template.cpp  class_normal_template.h  class_qtwidget_template.cpp  class_qtwidget_template.h  class_singleton_template.cpp  class_singleton_template.h  class_static_template.cpp  class_static_template.h  class_virtual_template.h
products/sgen/sgen_utils/inc/: SourceGen.h
products/sgen/sgen_utils/src/: SourceGen.cpp
products/sgen/sgen_utils/templates/: class_qtwidget_template.ui  class_virtual_template.h
